# isogeometric-analysis

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  results
2.3/: README.md  computeDphi.m  computeFiniteElementExample.m  computeLagrangePoly.m  computePhi.m  drawFEM1DExample.m  drawFEM1DExample2.m  drawLagrangePoly.m  fem_h_refinement_1.svg.xz  fem_h_refinement_2.svg.xz  lagrange.ofig  lagrange.svg.xz
3.1/: README.md  drawEllipseImplicit.m  drawEllipseParametric.m  drawSphereImplicit.m  drawSphereParametric.m  ellipse_parametric.ofig  ellipse_parametric.svg.xz  sphere_implicit.ofig  sphere_implicit.svg.xz
3.3/: README.md  bezier_2d.ofig  bezier_2d.svg.xz  bezier_3d.ofig  bezier_3d.svg.xz  bezier_deg.ofig  bezier_deg.svg.xz  bezier_surf.ofig  bezier_surf.svg.xz  computeBezier.m  computeBezierSurf.m  drawBezierCurve.m  drawBezierCurve2d.m  drawBezierCurve3d.m  drawBezierSurf.m  drawDegreeComparison.m
3.4/: .gitattributes  README.md  bspline_basis.ofig.xz  bspline_basis.svg.xz  bspline_basis_derivs.svg.xz  bspline_basis_derivs_2.svg.xz  bspline_bivariate_basis.svg.xz  bspline_curve.svg.xz  bspline_curve_3d.svg.xz  bspline_surf.svg.xz  findSpan.m  (+21 more)
rust/isogeometric-analysis/: Cargo.toml  README.md
rust/isogeometric-analysis/src/: core.rs  lib.rs
rust/isogeometric-analysis/src/bezier/: bezier.rs  mod.rs  teacup.rs  teapot.rs  teaspoon.rs  utahdata.rs
rust/isogeometric-analysis/src/core/: color.rs  equatable.rs  evaluate.rs  factorial.rs  hsl.rs  mapping.rs  matrix.rs  mod.rs  point.rs  range.rs  rowvector.rs  size.rs  utils.rs
(+188 files in other folders)
