[package]
name = "isogeometric_analysis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
env_logger = "0.9.0"
log = "0.4.14"
time-test = "0.2.2"
num = "0.1.27"
colorsys = "0.6.5"
unroll = "0.1.5"
float-cmp = "0.9.0"