[package]
name = "isogeometric_analysis"
version = "0.3.0"
edition = "2018"
license = "LGPL-3.0+"
description = "Create implementing algorithms related to Isogeometric Analysis. Bezier, B-spline, NURBS, numerical integration and isogeometric approach to PDE approximation."
homepage = "https://bugfreeblog.duckdns.org/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
env_logger = "0.9.0"
log = "0.4.14"
time-test = "0.2.2"
num = "0.1.27"
colorsys = "0.6.5"
unroll = "0.1.5"
float-cmp = "0.9.0"